--- a/Emby.Dlna/Emby.Dlna.csproj
+++ b/Emby.Dlna/Emby.Dlna.csproj
@@ -1,129 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{805844AB-E92F-45E6-9D99-4F6D48D129A5}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Emby.Dlna</RootNamespace>
-    <AssemblyName>Emby.Dlna</AssemblyName>
-    <DefaultLanguage>en-US</DefaultLanguage>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <ItemGroup>
-    <Compile Include="Api\DlnaServerService.cs" />
-    <Compile Include="Api\DlnaService.cs" />
-    <Compile Include="Common\Argument.cs" />
-    <Compile Include="Common\DeviceIcon.cs" />
-    <Compile Include="Common\DeviceService.cs" />
-    <Compile Include="Common\ServiceAction.cs" />
-    <Compile Include="Common\StateVariable.cs" />
-    <Compile Include="ConfigurationExtension.cs" />
-    <Compile Include="Configuration\DlnaOptions.cs" />
-    <Compile Include="ConnectionManager\ConnectionManager.cs" />
-    <Compile Include="ConnectionManager\ConnectionManagerXmlBuilder.cs" />
-    <Compile Include="ConnectionManager\ControlHandler.cs" />
-    <Compile Include="ConnectionManager\ServiceActionListBuilder.cs" />
-    <Compile Include="ContentDirectory\ContentDirectory.cs" />
-    <Compile Include="ContentDirectory\ContentDirectoryXmlBuilder.cs" />
-    <Compile Include="ContentDirectory\ControlHandler.cs" />
-    <Compile Include="ContentDirectory\ServiceActionListBuilder.cs" />
-    <Compile Include="ControlRequest.cs" />
-    <Compile Include="ControlResponse.cs" />
-    <Compile Include="Didl\DidlBuilder.cs" />
-    <Compile Include="Didl\Filter.cs" />
-    <Compile Include="Didl\StringWriterWithEncoding.cs" />
-    <Compile Include="DlnaManager.cs" />
-    <Compile Include="Eventing\EventManager.cs" />
-    <Compile Include="Eventing\EventSubscription.cs" />
-    <Compile Include="EventSubscriptionResponse.cs" />
-    <Compile Include="IConnectionManager.cs" />
-    <Compile Include="IContentDirectory.cs" />
-    <Compile Include="IEventManager.cs" />
-    <Compile Include="IMediaReceiverRegistrar.cs" />
-    <Compile Include="IUpnpService.cs" />
-    <Compile Include="Main\DlnaEntryPoint.cs" />
-    <Compile Include="MediaReceiverRegistrar\ControlHandler.cs" />
-    <Compile Include="MediaReceiverRegistrar\MediaReceiverRegistrar.cs" />
-    <Compile Include="MediaReceiverRegistrar\MediaReceiverRegistrarXmlBuilder.cs" />
-    <Compile Include="MediaReceiverRegistrar\ServiceActionListBuilder.cs" />
-    <Compile Include="PlayTo\CurrentIdEventArgs.cs" />
-    <Compile Include="PlayTo\Device.cs" />
-    <Compile Include="PlayTo\DeviceInfo.cs" />
-    <Compile Include="PlayTo\PlaybackProgressEventArgs.cs" />
-    <Compile Include="PlayTo\PlaybackStartEventArgs.cs" />
-    <Compile Include="PlayTo\PlaybackStoppedEventArgs.cs" />
-    <Compile Include="PlayTo\PlaylistItem.cs" />
-    <Compile Include="PlayTo\PlaylistItemFactory.cs" />
-    <Compile Include="PlayTo\PlayToController.cs" />
-    <Compile Include="PlayTo\PlayToManager.cs" />
-    <Compile Include="PlayTo\SsdpHttpClient.cs" />
-    <Compile Include="PlayTo\TransportCommands.cs" />
-    <Compile Include="PlayTo\TRANSPORTSTATE.cs" />
-    <Compile Include="PlayTo\TransportStateEventArgs.cs" />
-    <Compile Include="PlayTo\uBaseObject.cs" />
-    <Compile Include="PlayTo\uParser.cs" />
-    <Compile Include="PlayTo\uParserObject.cs" />
-    <Compile Include="PlayTo\UpnpContainer.cs" />
-    <Compile Include="PlayTo\uPnpNamespaces.cs" />
-    <Compile Include="Profiles\DefaultProfile.cs" />
-    <Compile Include="Profiles\DenonAvrProfile.cs" />
-    <Compile Include="Profiles\DirectTvProfile.cs" />
-    <Compile Include="Profiles\DishHopperJoeyProfile.cs" />
-    <Compile Include="Profiles\Foobar2000Profile.cs" />
-    <Compile Include="Profiles\LgTvProfile.cs" />
-    <Compile Include="Profiles\LinksysDMA2100Profile.cs" />
-    <Compile Include="Profiles\MarantzProfile.cs" />
-    <Compile Include="Profiles\MediaMonkeyProfile.cs" />
-    <Compile Include="Profiles\PanasonicVieraProfile.cs" />
-    <Compile Include="Profiles\PopcornHourProfile.cs" />
-    <Compile Include="Profiles\SamsungSmartTvProfile.cs" />
-    <Compile Include="Profiles\SharpSmartTvProfile.cs" />
-    <Compile Include="Profiles\SonyBlurayPlayer2013.cs" />
-    <Compile Include="Profiles\SonyBlurayPlayer2014.cs" />
-    <Compile Include="Profiles\SonyBlurayPlayer2015.cs" />
-    <Compile Include="Profiles\SonyBlurayPlayer2016.cs" />
-    <Compile Include="Profiles\SonyBlurayPlayerProfile.cs" />
-    <Compile Include="Profiles\SonyBravia2010Profile.cs" />
-    <Compile Include="Profiles\SonyBravia2011Profile.cs" />
-    <Compile Include="Profiles\SonyBravia2012Profile.cs" />
-    <Compile Include="Profiles\SonyBravia2013Profile.cs" />
-    <Compile Include="Profiles\SonyBravia2014Profile.cs" />
-    <Compile Include="Profiles\SonyPs3Profile.cs" />
-    <Compile Include="Profiles\SonyPs4Profile.cs" />
-    <Compile Include="Profiles\WdtvLiveProfile.cs" />
-    <Compile Include="Profiles\XboxOneProfile.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server\DescriptionXmlBuilder.cs" />
-    <Compile Include="Service\BaseControlHandler.cs" />
-    <Compile Include="Service\BaseService.cs" />
-    <Compile Include="Service\ControlErrorHandler.cs" />
-    <Compile Include="Service\ServiceXmlBuilder.cs" />
-    <Compile Include="Ssdp\DeviceDiscovery.cs" />
-    <Compile Include="Ssdp\Extensions.cs" />
+    <ProjectReference Include="..\MediaBrowser.Model\MediaBrowser.Model.csproj" />
+    <ProjectReference Include="..\MediaBrowser.Controller\MediaBrowser.Controller.csproj" />
+    <ProjectReference Include="..\MediaBrowser.Common\MediaBrowser.Common.csproj" />
+    <ProjectReference Include="..\RSSDP\RSSDP.csproj" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+  </PropertyGroup>
+
   <ItemGroup>
     <EmbeddedResource Include="Images\logo120.jpg" />
     <EmbeddedResource Include="Images\logo120.png" />
@@ -136,15 +24,7 @@
     <EmbeddedResource Include="Images\people480.jpg" />
     <EmbeddedResource Include="Images\people480.png" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\RSSDP\RSSDP.csproj">
-      <Project>{21002819-c39a-4d3e-be83-2a276a77fb1f}</Project>
-      <Name>RSSDP</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Profiles\Xml\Sharp Smart TV.xml" />
-  </ItemGroup>
+
   <ItemGroup>
     <EmbeddedResource Include="Profiles\Xml\Default.xml" />
     <EmbeddedResource Include="Profiles\Xml\Denon AVR.xml" />
@@ -173,41 +53,7 @@
     <EmbeddedResource Include="Profiles\Xml\Xbox One.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="MediaBrowser.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MediaBrowser.Common.3.3.53-beta\lib\netstandard2.0\MediaBrowser.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="MediaBrowser.Controller, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MediaBrowser.Server.Core.3.3.53-beta\lib\netstandard2.0\MediaBrowser.Controller.dll</HintPath>
-    </Reference>
-    <Reference Include="MediaBrowser.Model, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MediaBrowser.Common.3.3.53-beta\lib\netstandard2.0\MediaBrowser.Model.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.1\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="Profiles\Xml\Marantz.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
