--- a/MediaBrowser.Api/MediaBrowser.Api.csproj
+++ b/MediaBrowser.Api/MediaBrowser.Api.csproj
@@ -1,142 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4FD51AC5-2C16-4308-A993-C3A84F3B4582}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MediaBrowser.Api</RootNamespace>
-    <AssemblyName>MediaBrowser.Api</AssemblyName>
-    <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>none</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <RunPostBuildEvent>Always</RunPostBuildEvent>
-  </PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <ItemGroup>
-    <Compile Include="..\SharedVersion.cs">
-      <Link>Properties\SharedVersion.cs</Link>
-    </Compile>
-    <Compile Include="BrandingService.cs" />
-    <Compile Include="ChannelService.cs" />
-    <Compile Include="Devices\DeviceService.cs" />
-    <Compile Include="FilterService.cs" />
-    <Compile Include="IHasDtoOptions.cs" />
-    <Compile Include="LiveTv\ProgressiveFileCopier.cs" />
-    <Compile Include="PlaylistService.cs" />
-    <Compile Include="StartupWizardService.cs" />
-    <Compile Include="Subtitles\SubtitleService.cs" />
-    <Compile Include="Movies\CollectionService.cs" />
-    <Compile Include="Music\AlbumsService.cs" />
-    <Compile Include="BaseApiService.cs" />
-    <Compile Include="ConfigurationService.cs" />
-    <Compile Include="DisplayPreferencesService.cs" />
-    <Compile Include="EnvironmentService.cs" />
-    <Compile Include="GamesService.cs" />
-    <Compile Include="IHasItemFields.cs" />
-    <Compile Include="Images\ImageByNameService.cs" />
-    <Compile Include="Images\ImageRequest.cs" />
-    <Compile Include="Images\ImageService.cs" />
-    <Compile Include="Music\InstantMixService.cs" />
-    <Compile Include="ItemLookupService.cs" />
-    <Compile Include="ItemRefreshService.cs" />
-    <Compile Include="ItemUpdateService.cs" />
-    <Compile Include="Library\LibraryService.cs" />
-    <Compile Include="Library\LibraryStructureService.cs" />
-    <Compile Include="LiveTv\LiveTvService.cs" />
-    <Compile Include="LocalizationService.cs" />
-    <Compile Include="Movies\MoviesService.cs" />
-    <Compile Include="NewsService.cs" />
-    <Compile Include="NotificationsService.cs" />
-    <Compile Include="PackageService.cs" />
-    <Compile Include="PluginService.cs" />
-    <Compile Include="Images\RemoteImageService.cs" />
-    <Compile Include="ScheduledTasks\ScheduledTaskService.cs" />
-    <Compile Include="ScheduledTasks\ScheduledTasksWebSocketListener.cs" />
-    <Compile Include="ApiEntryPoint.cs" />
-    <Compile Include="SearchService.cs" />
-    <Compile Include="Session\SessionsService.cs" />
-    <Compile Include="SimilarItemsHelper.cs" />
-    <Compile Include="SuggestionsService.cs" />
-    <Compile Include="System\ActivityLogService.cs" />
-    <Compile Include="System\ActivityLogWebSocketListener.cs" />
-    <Compile Include="System\SystemService.cs" />
-    <Compile Include="Movies\TrailersService.cs" />
-    <Compile Include="TvShowsService.cs" />
-    <Compile Include="UserLibrary\ArtistsService.cs" />
-    <Compile Include="UserLibrary\BaseItemsByNameService.cs" />
-    <Compile Include="UserLibrary\BaseItemsRequest.cs" />
-    <Compile Include="UserLibrary\GameGenresService.cs" />
-    <Compile Include="UserLibrary\GenresService.cs" />
-    <Compile Include="UserLibrary\ItemsService.cs" />
-    <Compile Include="UserLibrary\MusicGenresService.cs" />
-    <Compile Include="UserLibrary\PersonsService.cs" />
-    <Compile Include="UserLibrary\StudiosService.cs" />
-    <Compile Include="UserLibrary\UserLibraryService.cs" />
-    <Compile Include="UserLibrary\UserViewsService.cs" />
-    <Compile Include="UserLibrary\YearsService.cs" />
-    <Compile Include="UserService.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VideosService.cs" />
-    <Compile Include="Session\SessionInfoWebSocketListener.cs" />
+    <ProjectReference Include="..\MediaBrowser.Model\MediaBrowser.Model.csproj" />
+    <ProjectReference Include="..\MediaBrowser.Controller\MediaBrowser.Controller.csproj" />
   </ItemGroup>
+
   <ItemGroup>
-    <Reference Include="MediaBrowser.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MediaBrowser.Common.3.3.53-beta\lib\netstandard2.0\MediaBrowser.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="MediaBrowser.Controller, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MediaBrowser.Server.Core.3.3.53-beta\lib\netstandard2.0\MediaBrowser.Controller.dll</HintPath>
-    </Reference>
-    <Reference Include="MediaBrowser.Model, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MediaBrowser.Common.3.3.53-beta\lib\netstandard2.0\MediaBrowser.Model.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <Compile Include="..\SharedVersion.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
