--- a/SocketHttpListener/SocketHttpListener.csproj
+++ b/SocketHttpListener/SocketHttpListener.csproj
@@ -1,128 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <ItemGroup>
+    <ProjectReference Include="..\MediaBrowser.Common\MediaBrowser.Common.csproj" />
+    <ProjectReference Include="..\MediaBrowser.Model\MediaBrowser.Model.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="..\SharedVersion.cs" />
+  </ItemGroup>
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1D74413B-E7CF-455B-B021-F52BDF881542}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SocketHttpListener</RootNamespace>
-    <AssemblyName>SocketHttpListener</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="MediaBrowser.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MediaBrowser.Common.3.3.53-beta\lib\netstandard2.0\MediaBrowser.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="MediaBrowser.Model, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MediaBrowser.Common.3.3.53-beta\lib\netstandard2.0\MediaBrowser.Model.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\SharedVersion.cs">
-      <Link>Properties\SharedVersion.cs</Link>
-    </Compile>
-    <Compile Include="ByteOrder.cs" />
-    <Compile Include="CloseEventArgs.cs" />
-    <Compile Include="CloseStatusCode.cs" />
-    <Compile Include="CompressionMethod.cs" />
-    <Compile Include="ErrorEventArgs.cs" />
-    <Compile Include="Ext.cs" />
-    <Compile Include="Fin.cs" />
-    <Compile Include="HttpBase.cs" />
-    <Compile Include="HttpResponse.cs" />
-    <Compile Include="Mask.cs" />
-    <Compile Include="MessageEventArgs.cs" />
-    <Compile Include="Net\AuthenticationSchemeSelector.cs" />
-    <Compile Include="Net\AuthenticationTypes.cs" />
-    <Compile Include="Net\BoundaryType.cs" />
-    <Compile Include="Net\ChunkedInputStream.cs" />
-    <Compile Include="Net\ChunkStream.cs" />
-    <Compile Include="Net\CookieHelper.cs" />
-    <Compile Include="Net\EntitySendFormat.cs" />
-    <Compile Include="Net\HttpConnection.cs" />
-    <Compile Include="Net\HttpEndPointListener.cs" />
-    <Compile Include="Net\HttpEndPointManager.cs" />
-    <Compile Include="Net\HttpKnownHeaderNames.cs" />
-    <Compile Include="Net\HttpListener.cs" />
-    <Compile Include="Net\HttpListenerBasicIdentity.cs" />
-    <Compile Include="Net\HttpListenerContext.cs" />
-    <Compile Include="Net\HttpListenerContext.Managed.cs" />
-    <Compile Include="Net\HttpListenerPrefixCollection.cs" />
-    <Compile Include="Net\HttpListenerRequest.cs" />
-    <Compile Include="Net\HttpListenerRequest.Managed.cs" />
-    <Compile Include="Net\HttpListenerRequestUriBuilder.cs" />
-    <Compile Include="Net\HttpListenerResponse.Managed.cs" />
-    <Compile Include="Net\HttpListenerResponse.cs" />
-    <Compile Include="Net\HttpRequestStream.cs" />
-    <Compile Include="Net\HttpRequestStream.Managed.cs" />
-    <Compile Include="Net\HttpResponseStream.cs" />
-    <Compile Include="Net\HttpResponseStream.Managed.cs" />
-    <Compile Include="Net\HttpStatusCode.cs" />
-    <Compile Include="Net\HttpStatusDescription.cs" />
-    <Compile Include="Net\HttpStreamAsyncResult.cs" />
-    <Compile Include="Net\HttpVersion.cs" />
-    <Compile Include="Net\ListenerPrefix.cs" />
-    <Compile Include="Net\UriScheme.cs" />
-    <Compile Include="Net\WebHeaderCollection.cs" />
-    <Compile Include="Net\WebHeaderEncoding.cs" />
-    <Compile Include="Net\WebSockets\HttpListenerWebSocketContext.cs" />
-    <Compile Include="Net\WebSockets\HttpWebSocket.cs" />
-    <Compile Include="Net\WebSockets\HttpWebSocket.Managed.cs" />
-    <Compile Include="Net\WebSockets\WebSocketCloseStatus.cs" />
-    <Compile Include="Net\WebSockets\WebSocketContext.cs" />
-    <Compile Include="Net\WebSockets\WebSocketValidate.cs" />
-    <Compile Include="Opcode.cs" />
-    <Compile Include="PayloadData.cs" />
-    <Compile Include="Primitives\ITextEncoding.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rsv.cs" />
-    <Compile Include="SocketStream.cs" />
-    <Compile Include="WebSocket.cs" />
-    <Compile Include="WebSocketException.cs" />
-    <Compile Include="WebSocketFrame.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
